--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
+    "socket.io-client": "^4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuidv4": "^6.2.6",
